--- a/part3/notes_backend_db/package.json
+++ b/part3/notes_backend_db/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "phonebook_backend",
+  "name": "notes_backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -14,8 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.9",
-    "morgan": "^1.10.0"
+    "mongoose": "^5.9.9"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
